Release history for xpointerbarrier

v20.05  2020-05-15
  [Changed]
  - Makefile: We now use pkg-config for better portability.
  - Makefile: Use C99.

v18.06  2018-06-24
  - This is a maintenance release, due to the project moving away from
    GitHub. No code changes.

v17.11  2017-11-16
  [Fixed]
  - Setting insets of "0" no longer creates conflicting barriers, which
    would result in one-directional barriers. (Fix for GitHub issue #1.)

v17.10  2017-10-18
  [Fixed]
  - We now use XRRGetMonitors(). In contrast to XRRGetScreenResources(),
    it does not cause the X server to hang for a few hundred
    milliseconds.

v17.09  2017-09-16
  [LICENSING]
  - The project has been relicensed under the MIT license (more
    precisely called "Expat License", but everyone calls it "MIT
    license" these days).

v16.08  2016-08-20
  [Fixed]
  - Improve signal handling, don't call fprintf.

v16.01  2016-01-05
  - Initial release.
  - Daemon, XRandR, signals, manpages.